--- a/file-attribute-auditor/file-attribute-auditor.ipynb
+++ b/file-attribute-auditor/file-attribute-auditor.ipynb
@@ -45,7 +45,7 @@
       "source": [
         "# Example hostnames: \"platform.tetrascience.com\" \"tetrascience-uat.com\"\n",
         "tdpHostname = \"tetrascience-uat.com\"\n",
-        "orgSlug = \"project-amplify\"\n",
+        "orgSlug = \"\"\n",
         "userToken = \"\"\n",
         "headers = {\"x-org-slug\": orgSlug, \"ts-auth-token\": userToken}\n",
         "apiRoot = \"https://api.\" + tdpHostname\n",
