--- a/file-attribute-auditor/file-attribute-auditor.ipynb
+++ b/file-attribute-auditor/file-attribute-auditor.ipynb
@@ -153,7 +153,7 @@
         "id": "fddc480f"
       },
       "source": [
-        "# function to generate summary and detailed dataframes from EQL result"
+        "# Function to generate summary and detailed dataframes from EQL result"
       ]
     },
     {
